<resources>
    <string name="app_name">Another One</string>
    <string name="pressed">You pressed the Button </string>
    <string name="times"> times</string>
    <string name="time"> time</string>
    <string name="button">Another one</string>
    <string name="refresh">Refresh</string>
    <string name="your_number">Reach: </string>
    <string name="pressStart">Press start to go!</string>
    <string name="goalreached">You Win!</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="startGame">Start</string>
    <string name="setDifficulty">Set Difficulty</string>
    <string name="timer">Timer</string>
    <string name="youLose">You Lose</string>
    <string name="timeLeft">"Time left: "</string>
    <string name="seconds">seconds left</string>
    <string name="cycles">Cycles: </string>
    <string name="cycle">Cycle: </string>

</resources>